@@ -8,18 +8,6 @@
     <build>
          <plugins>
             <!-- Plugin para compilar o código -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.14.0</version>
-                <configuration>
-                    <source>23</source>
-                    <target>23</target>
-                    <compilerArgs>
-                        <arg>-Xlint</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
 
              <!--Plugin para gerar o JAR corretamente--> 
             <plugin>
@@ -35,7 +23,21 @@
                     </archive>
                 </configuration>
             </plugin>
-        </plugins>
+             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-compiler-plugin</artifactId>
+                 <version>3.14.0</version>
+                 <configuration>
+                     <source>23</source>
+                     <target>23</target>
+                     <compilerArgs>
+                         <arg>-Xlint</arg>
+                         <arg>--enable-preview</arg>
+                         <arg>--enable-preview</arg>
+                     </compilerArgs>
+                 </configuration>
+             </plugin>
+         </plugins>
     </build>
     <dependencies>
         <dependency>
